--- a/profile/package.json
+++ b/profile/package.json
@@ -11,9 +11,15 @@
     "test": "npm run unit && npm run e2e",
     "build": "node build/build.js"
   },
+  "keywords": [
+    "vue",
+    "vuex"
+  ],
   "dependencies": {
     "vue": "^2.5.2",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "vuex": "^3.4.0",
+    "es6-promise": "^4.2.8"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
